--- a/image_superresolution.ipynb
+++ b/image_superresolution.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "import argparse\n",
     "import os\n",
-    "# os.environ['CUDA_VISIBLE_DEVICES'] = '1'\n",
+    "# os.environ['CUDA_VISIBLE_DEVICES'] = '2'\n",
     "\n",
     "import numpy as np\n",
     "from models import *\n",
@@ -44,7 +44,7 @@
     "dtype = torch.cuda.FloatTensor\n",
     "\n",
     "imsize = -1 \n",
-    "factor = 4 # 8\n",
+    "factor = 5 # 8\n",
     "enforse_div32 = 'CROP' \n",
     "PLOT = True\n",
     " \n",
@@ -98,7 +98,7 @@
     "if PLOT:\n",
     "    plot_image_grid([imgs['HR_np'], imgs['bicubic_np'], imgs['sharp_np'], imgs['nearest_np']], 4,12);\n",
     "    print ('PSNR bicubic: %.4f   PSNR nearest: %.4f' %  (\n",
-    "                                        compare_psnr(imgs['HR_np'], imgs['bicubic_np']), \n",
+    "                                        compare_psnr(imgs['HR_np'], \n",
     "                                        compare_psnr(imgs['HR_np'], imgs['nearest_np'])))"
    ]
   },
@@ -126,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7"
   }
  },
  "nbformat": 4,
